@@ -1,24 +1,24 @@
 /*
-  Header for the 'epsmsc' library by Claude L. Simon (csimon@epeios.org)
-  Copyright (C) 2000 Claude L. SIMON (csimon@epeios.org) 
+	Header for the 'epsmsc' library by Claude SIMON (csimon@epeios.org)
+	Copyright (C) 2000, 2003 Claude SIMON (csimon@epeios.org).
 
-  This file is part of the Epeios (http://www.epeios.org/) project.
-  
+	This file is part of the Epeios (http://epeios.org/) project.
 
-  This library is free software; you can redistribute it and/or
-  modify it under the terms of the GNU General Public License
-  as published by the Free Software Foundation; either version 2
-  of the License, or (at your option) any later version.
+	This library is free software; you can redistribute it and/or
+	modify it under the terms of the GNU General Public License
+	as published by the Free Software Foundation; either version 2
+	of the License, or (at your option) any later version.
  
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
 
-  You should have received a copy of the GNU General Public License
-  along with this program; if not, go to http://www.fsf.org or write to the
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, go to http://www.fsf.org/
+	or write to the:
   
-                        Free Software Foundation, Inc.,
+         	         Free Software Foundation, Inc.,
            59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 
@@ -29,7 +29,7 @@
 
 #define EPSMSC_NAME		"EPSMSC"
 
-#define	EPSMSC_VERSION	"$Revision$"	
+#define	EPSMSC_VERSION	"$Revision$"
 
 #define EPSMSC_OWNER		"Claude SIMON (csimon@epeios.org)"
 
@@ -38,13 +38,13 @@
 extern class ttr_tutor &EPSMSCTutor;
 
 #if defined( XXX_DBG ) && !defined( EPSMSC_NODBG )
-#define EPSMSC_DBG 
+#define EPSMSC_DBG
 #endif
 
 /* Begin of automatic documentation generation part. */
 
 //V $Revision$
-//C Claude L. SIMON (csimon@epeios.org)
+//C Claude SIMON (csimon@epeios.org)
 //R $Date$
 
 /* End of automatic documentation generation part. */
@@ -53,6 +53,11 @@ extern class ttr_tutor &EPSMSCTutor;
 				  /* do not modify anything above this limit */
 				  /*			  unless specified			 */
 				  /*******************************************/
+
+/* Addendum to the automatic documentation generation part. */
+//D EPeioS MiSC 
+/* End addendum to automatic documentation generation part. */
+
 /*$BEGIN$*/
 
 #include "err.h"
